Fix button size on mobile

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -69,7 +69,7 @@ img {
   box-shadow: $shadow_1;
 
   @include sm {
-    max-width: 288px;
+    max-width: 328px;
   }
 
   &.secondary {
